--- a/roles/docker/templates/daemon.json.j2
+++ b/roles/docker/templates/daemon.json.j2
@@ -1,22 +1,18 @@
 {
-  "log-driver": "json-file",
+  "log-driver": "{{ docker_daemon_config['log-driver'] }}",
   "log-opts": {
-    "max-size": "10m",
-    "max-file": "3"
+{% for key, value in docker_daemon_config['log-opts'].items() %}
+    "{{ key }}": "{{ value }}"{{ ',' if not loop.last else '' }}
+{% endfor %}
   },
-  "storage-driver": "overlay2",
-  "exec-opts": ["native.cgroupdriver=systemd"],
+  "storage-driver": "{{ docker_daemon_config['storage-driver'] }}",
+  "exec-opts": {{ docker_daemon_config['exec-opts'] | to_json }},
 {% if docker_security_enabled %}
   "userns-remap": "dockremap",
   "no-new-privileges": true,
 {% endif %}
-  "live-restore": true,
-  "userland-proxy": false,
+  "live-restore": {{ docker_daemon_config['live-restore'] | lower }},
+  "userland-proxy": {{ docker_daemon_config['userland-proxy'] | lower }},
   "ip-forward": false,
   "iptables": true
-{% if docker_daemon_config %}
-{% for key, value in docker_daemon_config.items() %}
-  ,"{{ key }}": {{ value | to_json }}
-{% endfor %}
-{% endif %}
 }
